--- a/templates/pages/homepage.html
+++ b/templates/pages/homepage.html
@@ -13,15 +13,6 @@
 
     <title>WAD Travels Project</title>
 
-    <style>
-        .disbtn {
-          background-color: #8b81ff;
-          opacity: 0.6;
-          transition: 0.3s;
-        }
-        
-        .disbtn:hover {opacity: 1}
-    </style>
 </head>
 <body>
 
@@ -70,7 +61,7 @@
             <img src="images/seoul.jpg" class="card-img-top" height="200px">
             <div class="card-body">
               <h5 class="card-title">Dec22 Seoul Trip!</h5>
-              <a href="#" class="btn btn-primary">Edit Trip</a>
+              <button href="#" class="btn btn-main-bold">Edit Trip</a>
             </div>
             <div class="card-footer text-muted">
               Last edited: 2 days ago
@@ -81,7 +72,7 @@
             <img src="images/NYC.jpg" class="card-img-top" height="200px">
             <div class="card-body">
               <h5 class="card-title">June23 New York City</h5>
-              <a href="#" class="btn btn-primary">Edit Trip</a>
+              <button href="#" class="btn btn-main-bold">Edit Trip</a>
             </div>
             <div class="card-footer text-muted">
                 Last edited: 3 weeks ago
@@ -92,19 +83,15 @@
             <img src="images/interlaken.jpg" class="card-img-top" height="200px">
             <div class="card-body">
               <h5 class="card-title">June19 Interlaken</h5>
-              <a href="#" class="btn disbtn btn-primary">View Trip</a>
+              <button href="#" class="btn btn-fade">View Trip</a>
             </div>
             <div class="card-footer text-muted">
                 Last edited: 3 years ago
             </div>
           </div>
-   
 
-          
         
         </div>
-
-
     </div>
 
 
