--- a/templates/create_activities/create_activities.html
+++ b/templates/create_activities/create_activities.html
@@ -35,20 +35,16 @@
                             <div class="input-group">
                                 <span class="input-group-text">#</span>
                                 <div class="form-floating">
-                                    <input type="text" class="form-control" id="input_tag" placeholder="Add a Tag" v-model="tag" @input="check_tag()">
-                                    <label for="input_tag">Add a Tag</label>
+                                    <input type="text" class="form-control" id="input_tag" placeholder="Add a Tag" list="list_all_tags" v-model="tag_input">
+                                    <label for="input">Add a Tag</label>
                                 </div>
-                            </div>
-                            <!-- IF NTH IS TYPED -->
-                            <div style="font-style: italic; font-size: small;" v-if="tag.length == 0">
-                                Suggested Tags: Shopping, Museum, Food, Attraction, Sports, Theme Park, Camping, Hiking, Aquarium, Zoo, Tour, Cruise
-                            </div>
-                            <div style="font-style: italic; font-size: small;" v-else-if="result.length > 0">
-                                Suggested Tags: {{ result }}
-                            </div>
-                            <div style="font-style: italic; font-size: small;" v-else>
-                                Create a new tag!
-                            </div>
+                            </div> 
+
+                            <!-- LIST OF CURRENT TAGS -->
+                            <datalist id="list_all_tags">
+                                <option v-for="tag of tags" :value="tag"></option>
+
+                            </datalist>
 
                         
                         </div>
