--- a/templates/activity_card_listview/activity_card.html
+++ b/templates/activity_card_listview/activity_card.html
@@ -8,64 +8,27 @@
     <link href="../template.css" rel="stylesheet">
     
     <!-- BOOTSTRAP CSS-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="../../css/main.min.css" rel="stylesheet">
+
+    <!-- VUE -->
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+
 
 
 </head>
 <!-- ACTIVITY CARD -->
 <body>
-    <h1 class="m-5">VIEW IN 60%+- WINDOW</h1>
-    <h1 class="m-5">CARD SAMPLE 1</h1>
-    
+    <h1>Card Sample</h1>
     <!-- COPY FROM HERE -->
-    <div class="container text-dark">
-    <div class="card">
-        <!-- LOCATION/PLACE -->
-        <div class="card-header fs-3 fw-semibold">
-            Hongdae Shopping Street
-        </div>
-        <!-- BADGE & DESCRIPTION -->
-        <div class="card-body">
-            <span class="badge rounded-pill text-bg-warning mb-3">#Shopping</span>
-            <h6>100 SGD/person</h6>
-            <p class="description" style="text-align: justify;">Description included by user.     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod consequuntur, provident magnam nobis quis autem odit, nulla inventore cumque repudiandae facere. Nisi, itaque! Odit eos libero dolorem, reprehenderit dicta illo! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae alias odit porro dolores ipsum at accusantium vero minus veniam in tenetur eius commodi quo facere recusandae natus voluptas quos harum velit rem officiis, odio et atque. Sint voluptatum, adipisci voluptatem ipsam quaerat reiciendis ab quo!</p>
-            
-            <hr>
-            <!-- PROGRESS BAR & VOTING -->
-            <div class="container ps-0" style="width:60%; margin-left: 0px;">
-                <p class="pt-3">Current Votes: </p>
-                    <div class="progress">
-                        <div class="progress-bar bg-success" role="progressbar" aria-label="voted_yes" style="width: 45%" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
-                        <div class="progress-bar bg-danger" role="progressbar" aria-label="voted_no" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
-                        <div class="progress-bar bg-secondary" role="progressbar" aria-label="yet_to_vote" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-
-                    <div class="voting_buttons pt-3" style="display: flex; justify-content:center">
-                        <button type="button" class="btn btn-danger btn-sm reject_btn" style="margin-right:10px">Reject</button>
-                        <button type="button" class="btn btn-success btn-sm vote_btn" style="margin-left:10px"> Vote </button>
-                    </div>
-            </div>
-            <!-- EDIT BUTTON -->
-            <button type="button" class="btn btn-sm rounded btn-main text-white float-end" style="position:absolute;bottom:25; right:25;" data-bs-toggle="button">Edit</button>
-
-        </div>
-    </div>
-    </div>
-
-    <!-- END HERE -->
-
-
-
-
-    <!-- COPY FROM HERE -->
-
-    <h1 class="m-5">CARD SAMPLE 2</h1>
 
     <div class="container text-dark">
     <div class="card">
         <!-- LOCATION/PLACE -->
-        <div class="card-header fs-3 fw-semibold">
+        <div class="card-header">
+            <span class="fs-3 fw-semibold">
             Hongdae Shopping Street
+            </span>
+            <span class="badge rounded-pill text-bg-warning ms-1" >#Shopping</span>
         </div>
 
         <!-- BADGE & DESCRIPTION -->
@@ -73,23 +36,28 @@
             <div class="container p-0">
             <div class="row">
                 <div class = "col-8">
-                    <span class="badge rounded-pill text-bg-warning mb-3">#Shopping</span>
-                    <h6>100 SGD/per person</h6>
+                    <p style="font-style: italic"> 365-8 Seogyo-dong, Mapo-gu, Seoul, South Korea</p>
+                    <h6>100 SGD/100976.93 KRW per person</h6>
                     <p class="description" style="text-align: justify;">Description included by user.     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod consequuntur, provident magnam nobis quis autem odit, nulla inventore cumque repudiandae facere. Nisi, itaque! Odit eos libero dolorem, reprehenderit dicta illo!</p>
                 </div>
                 
                 <!-- PROGRESS BAR AND VOTING BUTTONS -->
-                <div class="col-4" >
+                <div class="col-4" id="main">
+                    <div> {{ voted_no }}</div>
+                    <div> {{ voted_yes }}</div>
                     <p class="pt-3">Current Votes: </p>
+                    
                         <div class="progress">
-                            <div class="progress-bar bg-success" role="progressbar" aria-label="voted_yes" style="width: 45%" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
-                            <div class="progress-bar bg-danger" role="progressbar" aria-label="voted_no" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
-                            <div class="progress-bar bg-secondary" role="progressbar" aria-label="yet_to_vote" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-success" role="progressbar" aria-label="voted_yes" :style="{width: voted_yes + '%' }" v-bind:aria-valuenow="voted_yes" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-danger" role="progressbar" aria-label="voted_no" :style="{width: voted_no + '%' }" v-bind:aria-valuenow="voted_no" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-secondary" role="progressbar" aria-label="yet_to_vote" :style="{width: yet_to_vote + '%' }" v-bind:aria-valuenow="yet_to_vote" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
+
                     <div class="pt-3" style="display: flex; justify-content: center;">
-                      <button type="button" class="btn btn-danger btn-sm reject_btn" style="margin-right: 5px;">Reject</button>
+                      <button type="button" class="btn btn-danger btn-sm reject_btn" style="margin-right: 5px;" v-on:click="user_reject()">Reject</button>
                       <button type="button" class="btn btn-success btn-sm vote_btn" style="margin-left: 5px;"> Vote </button>
                     </div>
+                    
                     
                 </div>
         
@@ -119,5 +87,8 @@
 
     <!-- BOOTSTRAP JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
+    <script src="script.js"></script>
+
 </body>
 </html>
