--- a/templates/pages/create-trip.html
+++ b/templates/pages/create-trip.html
@@ -11,12 +11,18 @@
     <!-- bootstrap css -->
     <link href="../../css/main.min.css" rel="stylesheet">
 
+     <!-- Flatpickr CSS-->
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+
+     <!-- Vue js -->
+     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+
     <title>WAD Travels Project</title>
 
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+    <nav class="navbar navbar-expand-sm navbar-light bg-light border-bottom border-secondary sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#"><b>The JAWKS-7</b></a>
                 <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
@@ -26,9 +32,6 @@
             <div class="collapse navbar-collapse" id="collapsibleNavId">
 
             <ul class="navbar-nav me-auto mt-2 mt-lg-0">
-                <li class="nav-item">
-                    <a class="d-sm-none nav-link" href="#"><button type="button" class="btn btn-main-fixed">+ Plan New Trip</button></a>
-                </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="#" aria-current="page">Trips <span class="visually-hidden">(current)</span></a>
                 </li>
@@ -52,35 +55,86 @@
         </div>
     </nav>
 
+        <!-- new trip form -->
+    <div class="container-md text-dark py-3 position-relative" id="datetime_app">
+        <form action="#">
+            <!-- title -->
+            <div class="row text-center">
+                <h1 class="fw-bold text-primary p-2">Plan a new trip</h1>
+            </div>
 
-    <div class="container d-flex justify-content-center py-4">
-        <h1 class="fw-bold">Plan a new trip</h1>
+            <!-- where to? -->
+            <div class="row justify-content-center mt-4">
+                <div class="form-floating">
+                    <input type="text" class="form-control" name="destination_country" placeholder="country" list="list_all_countries">
+                    <label for="destination_country"><i class="fa-solid fa-plane-departure text-primary mx-2"></i><span style="color: rgb(34, 152, 152); font-weight: bold;"> Where to?</span></label>
+                </div>
+            </div>
 
-
-
-
-
+            <!-- list of countries (for dropdowns) -->
+            <datalist id="list_all_countries">
+                <option v-for="e_country of all_countries" :value="e_country"></option>
+            </datalist>
+        
+            <!-- trip-from date -->         
+            <div class="row justify-content-center">       
+                <div class="form-floating my-3 col">
+                    <input type="date" name="start_date" placeholder="Select Date" id="date_test">
+                    <label for="start_date"><i class="fa-regular fa-calendar mx-2"></i> <span style="color: rgb(34, 152, 152);"> Start Date</span></label>
+                </div>
+            
+                <!-- trip-to date -->                
+                <div class="form-floating my-3 col">
+                    <input type="date" name="end_date" placeholder="Select Date" id="date_test">
+                    <label for="end_date"><i class="fa-regular fa-calendar mx-2"></i><span style="color: rgb(34, 152, 152);"> End Date</span></label>
+                </div>
+            </div>
+        
+            <!-- collab & submit -->
+            <div class="row justify-content-center">
+                <div>
+                    <button type="button" class="btn btn-fade">+ Add Collaborators</button>
+                </div>
+                <div class="p-1 mt-3" style="max-width: 130px;">
+                    <button type="button" class="btn btn-primary text-light">Start Planning</button>
+                </div>
+            </div>
+        
+        </form>
     </div>
 
-
-
+    <!--progress bar-->
+    <br><br>
+    <div class="container-sm position-relative mx-auto">
+        <div class="progress" style="height: 1px;">
+            <div class="progress-bar" role="progressbar" aria-label="Progress" style="width: 0%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <button type="button" class="position-absolute top-0 start-0 translate-middle btn btn-sm btn-primary rounded-pill" style="width: 2rem; height:2rem;" disabled><br>Country</button>
+        <button type="button" class="position-absolute top-0 start-25 translate-middle btn btn-sm btn-secondary rounded-pill" style=" width: 2rem; height:2rem;"disabled><br>Add Activities</button>
+        <button type="button" class="position-absolute top-0 start-50 translate-middle btn btn-sm btn-secondary rounded-pill" style="width: 2rem; height:2rem;"disabled><br>Vote</button>
+        <button type="button" class="position-absolute top-0 start-75 translate-middle btn btn-sm btn-secondary rounded-pill" style=" width: 2rem; height:2rem;"disabled><br>Sort</button>
+        <button type="button" class="position-absolute top-0 start-100 translate-middle btn btn-sm btn-secondary rounded-pill" style="width: 2rem; height:2rem;"disabled><br>Enjoy your trip!</button>
+    </div>
     
-        
-       
-   
-    
-
-
-
-
+</div>
 
 
     <!-- START OF JS IMPORTS (DO NOT ADD ANYTHING BELOW THIS LINE!) ---------------------------------------------------------------------------------------------- -->
+    <!-- AXIOS import -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    
     <!-- Font Awesome JS -->
     <script src="https://kit.fontawesome.com/c7ddd7a650.js" crossorigin="anonymous"></script>
-
+    
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    
+    <!-- Flatpickr JS -->
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+
+    <!-- local js import -->
+    <script src="../date_time/date_time.js"></script>
+   
 </body>
 </html>
 
