--- a/templates/pages/homepage.html
+++ b/templates/pages/homepage.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+    <nav class="navbar navbar-expand-sm navbar-light bg-light border-bottom border-secondary sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#"><b>The JAWKS-7</b></a>
                 <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
