--- a/templates/flight_page/flight_page.html
+++ b/templates/flight_page/flight_page.html
@@ -115,16 +115,119 @@
             </div>
 
             <!-- all page content goes in here -->
-            <div class="col">
+            <div class="col" id="flight_app">
                 <!-- create button -->
-                <div class="row mt-3 justify-content-end">
+                <div class="row my-3 justify-content-end">
                     <div class="col-md-3 d-flex justify-content-center">
                         <button class="btn btn-main">Create New Flight</button>
                     </div>
                 </div>
 
+                <!-- create all flight items -->
                 <div class="row" v-for="e_flight_obj of flight_obj_arr">
-                    
+                    <div class="container-md text-dark bg-mild rounded-4 py-3 position-relative my-2 fs-6">
+                        <form action="#">
+                            <!-- flight title & departure & arrival country -->
+                            <div class="row justify-content-center align-items-center mt-3 mb-5">
+                                <div class="col-md-4 text-md-start text-center">
+                                    <h2 class="ms-md-5">Flight {{e_flight_obj.ID}}</h2>
+                                </div>
+                
+                                <!-- 1&2. Departure and Arrival country -->
+                                <div class="col-md-8">
+                                    <div class="row align-items-center">
+                                        <div class="col-5">
+                                            <h4 class="my-auto text-end">Departure Country</h4>
+                                        </div>
+                        
+                                        <!-- flight icon -->
+                                        <div class="col-2 text-center">
+                                            <i class="fa-solid fa-arrow-right fa-2xl d-md-block d-none"></i>
+                                            <i class="fa-solid fa-arrow-right d-md-none d-md-block"></i>
+                                        </div>
+                        
+                                        <!-- 2. Arrival country -->
+                                        <div class="col-5">
+                                            <h4 class="my-auto">Arrival Country</h4>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                
+                            <!-- departure & arrival info -->
+                            <div class="row mb-3 justify-content-center">
+                                <div class="col-3">
+                                    <p><i class="fa-solid fa-hourglass-half fa-lg"></i>
+                                    &nbsp;{{duration_hours}}hr {{duration_minutes}}min
+                
+                                    <i class="fa-solid fa-money-bill fa-lg ms-3"></i>&nbsp;{{price}}{{currency}}</p>
+                                </div>
+                
+                                <div class="col-md-4">
+                                    <div class="d-flex justify-content-evenly">
+                                        <div class="d-inline-block">
+                                            <h4 class="fw-bold my-auto">DEP</h4>
+                                        </div>
+                                        <!-- 3. Departure time -->
+                                        <div class="d-inline-block">
+                                            <p class="my-auto"><span class="fw-semibold">{{convert_datetime_readable(depart_datetime)}}</span><br><span class="fst-italic">{{depart_tz}}</span></p>
+                                        </div>
+                                    </div>
+                                </div>
+                
+                                <div class="col-md-4">
+                                    <div class="d-flex justify-content-evenly">
+                                        <div class="d-inline-block">
+                                            <h4 class="fw-bold my-auto">ARR</h4>
+                                        </div>
+                                        <!-- 4. Arrival time -->
+                                        <div class="d-inline-block">
+                                            <p class="my-auto"><span class="fw-semibold">{{convert_datetime_readable(arrive_datetime)}}</span><br><span class="fst-italic">{{arrive_tz}}</span></p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <div class="col-3">
+                                <button class="btn btn-mild2 my-2 ms-md-5" type="button" data-bs-toggle="collapse" data-bs-target="#flightX_dropdown" aria-expanded="false" aria-controls="flightX_dropdown" @click="toggle_dropdown()">
+                                    <i v-if="!dropdown_open" class="fa-solid fa-chevron-down fa-sm"></i>
+                                    <i v-if="dropdown_open" class="fa-solid fa-chevron-up fa-sm"></i>
+                                </button>
+                            </div>
+                
+                            
+                            <!-- collapsable -->
+                            <div class="collapse mx-md-5 pb-5" id="flightX_dropdown">
+                                <hr class="bg-dark">
+                                <div class="row g-3 mt-2">
+                                    <div class="col-md-4 col-sm-6">
+                                        <!-- airline -->
+                                        <p class="d-inline ms-2 fs-5"><span class="fw-semibold">Airline:</span> {{airline}}</p>
+                                    </div>
+                                    <div class="col-md-4 col-sm-6">
+                                        <!-- flight no -->
+                                        <p class="d-inline ms-2 fs-5"><span class="fw-semibold">Flight No:</span> {{flight_no}}</p>
+                                    </div>
+                                    <div class="col-md-4 col-sm-6">
+                                        <!-- airport -->
+                                        <p class="d-inline ms-2 fs-5"><span class="fw-semibold">Airport:</span> {{airport}}</p>
+                                    </div>
+                                    <div class="col-md-4 col-sm-6">
+                                        <!-- terminal -->
+                                        <p class="d-inline ms-2 fs-5"><span class="fw-semibold">Terminal:</span> {{terminal}}</p>
+                                    </div>
+                                    <div class="col-md-4 col-sm-6">
+                                        <!-- gate number -->
+                                        <p class="d-inline ms-2 fs-5"><span class="fw-semibold">Gate:</span> {{gate}}</p>
+                                    </div>
+                                </div>
+                            </div>
+                
+                            <div class="save-btn-div-flight-page justify-content-end">
+                                <button type="button" class="btn btn-main-bold-fixed">Edit</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
