--- a/templates/pages/trips-homepage.html
+++ b/templates/pages/trips-homepage.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- local css -->
-    <link rel="stylesheet" href="template.css">
+    <link rel="stylesheet" href="../template.css">
 
     <!-- bootstrap css -->
-    <link href="../css/main.min.css" rel="stylesheet">
+    <link href="../../css/main.min.css" rel="stylesheet">
 
     <title>WAD Travels Project</title>
+
 </head>
 <body>
 
-    <!-- main nav bar at top of all pages -->
     <nav class="navbar navbar-expand-sm navbar-light bg-light border-bottom border-secondary sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#"><b>The JAWKS-7</b></a>
@@ -54,6 +54,47 @@
 
         </div>
     </nav>
+
+    <div class="p-3 row d-flex flex-wrap justify-content-center">
+        
+        <div class="card border-info text-center mx-2 my-2 col-md-6 col-sm-6 p-1" style="width: 18rem">
+            <img src="images/seoul.jpg" class="card-img-top" height="200px">
+            <div class="card-body">
+              <h5 class="card-title">Dec22 Seoul Trip!</h5>
+              <button href="#" class="btn btn-main-bold">Edit Trip</a>
+            </div>
+            <div class="card-footer text-muted">
+              Last edited: 2 days ago
+            </div>
+          </div>
+
+          <div class="card border-info text-center mx-2 my-2 col-md-6 col-sm-6 p-1" style="width: 18rem">
+            <img src="images/NYC.jpg" class="card-img-top" height="200px">
+            <div class="card-body">
+              <h5 class="card-title">June23 New York City</h5>
+              <button href="#" class="btn btn-main-bold">Edit Trip</a>
+            </div>
+            <div class="card-footer text-muted">
+                Last edited: 3 weeks ago
+            </div>
+          </div>
+
+          <div class="card border-info text-center mx-2 my-2 col-md-6 col-sm-6 p-1" style="width: 18rem">
+            <img src="images/interlaken.jpg" class="card-img-top" height="200px">
+            <div class="card-body">
+              <h5 class="card-title">June19 Interlaken</h5>
+              <button href="#" class="btn btn-fade">View Trip</a>
+            </div>
+            <div class="card-footer text-muted">
+                Last edited: 3 years ago
+            </div>
+          </div>
+
+        
+        </div>
+    </div>
+
+
 
     <!-- START OF JS IMPORTS (DO NOT ADD ANYTHING BELOW THIS LINE!) ---------------------------------------------------------------------------------------------- -->
     <!-- Font Awesome JS -->
