--- a/templates/template.html
+++ b/templates/template.html
@@ -19,7 +19,7 @@
 <body>
 
     <!-- main nav bar at top of all pages -->
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+    <nav class="navbar navbar-expand-sm navbar-light bg-light border-bottom border-secondary sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#"><b>The JAWKS-7</b></a>
                 <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
