--- a/templates/pages/sidebar-general.html
+++ b/templates/pages/sidebar-general.html
@@ -86,7 +86,7 @@
                     </ul>
                     <hr>
                     <div>
-                        <a class="btn btn-danger d-none d-sm-inline" href="#" role="button">Confirm Activities</a>
+                        <button class="btn btn-secondary d-none d-sm-inline" href="#">Confirm Activities</button>
                     </div>
                     <hr>
 
