--- a/templates/pages/trips-homepage.html
+++ b/templates/pages/trips-homepage.html
@@ -27,7 +27,7 @@
 
             <ul class="navbar-nav me-auto mt-2 mt-lg-0">
                 <li class="nav-item">
-                    <a class="d-sm-none nav-link" href="#"><button type="button" class="btn btn-main-fixed">+ Plan New Trip</button></a>
+                    <button class="d-sm-none nav-link btn btn-main-fixed" style="width: 150px;" href="#">+ Plan New Trip</button>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="#" aria-current="page">Trips <span class="visually-hidden">(current)</span></a>
