--- a/templates/pages/sign-up-page.html
+++ b/templates/pages/sign-up-page.html
@@ -13,6 +13,7 @@
 
     <!-- external js file -->
     <script type="module" src="temp/signup_login.js"></script>
+    
     <!-- vue script -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
@@ -28,18 +29,23 @@
             margin-right: 0;
             }
         }
+
+        #firebaseui-auth-container {
+            position:absolute;
+            top:70%
+        }
       </style>
 </head>
 <body id="signuplogin">
 
 <div class="container py-4">
-    <div class="d-flex justify-content-center p-4">
-			<p class="fs-1 fw-bold text-primary">The JAWKS-7 LOGO</p>
+    <div class="d-flex justify-content-center p-3">
+			<p class="fs-1 fw-bold text-primary text-center">The JAWKS-7 LOGO</p>
     </div>
     <div class="row g-0 align-items-center">
       <div class="col-lg-6 mb-5 mb-lg-0">
         <div class="card cascading-right " style="
-            background: hsla(0, 0%, 100%, 0.55);
+            background: hsla(20, 10%, 94%, 0.11);
             backdrop-filter: blur(30px);
             ">
             <div class="card-body p-5 shadow-5 text-center">
@@ -82,12 +88,16 @@
                     </small>
                 </div>
 
+                <div class="d-flex justify-content-center links">
+					Already have an account?&nbsp<a href="log-in-page.html">Log In</a>
+				</div>
+                <br>
                 <!-- Submit button -->
                 <div class="d-grid">
                     <button @click="sign_up()" class="btn btn-primary mb-4">Sign Up</button>
                 </div>
 
-                <!-- Register buttons -->
+                <!-- fb/google buttons can delete if dw-->
                 <div class="text-center">
                     <p>or sign up with:</p>
                     <button type="button" class="btn btn-link btn-floating mx-1">
