--- a/templates/pages/log-in-page.html
+++ b/templates/pages/log-in-page.html
@@ -15,7 +15,13 @@
 
     <style>
         body {
-        background-image: url("images/login-bg.jpg");
+        background: url("images/login-bg.jpeg") center center fixed;
+        background-size: cover;
+        }
+
+        #firebaseui-auth-container {
+            position:absolute;
+            top:70%
         }
     </style>
     
@@ -23,42 +29,38 @@
 <body>
 
 <div class="container">
-    <div class="d-flex justify-content-center p-5">
+    <div class="d-flex justify-content-center p-4">
 		<div class="card p-4">
-			<p class="fs-1 fw-bold text-primary">The JAWKS-7</p>
+			<p class="fs-1 fw-bold text-primary text-center">The JAWKS-7 Logo</p>
         </div>
     </div>
 
 	<div class="d-flex justify-content-center h-100">
 		<div class="card">
-			<div class="card-header">
+			<div class="card-header text-primary">
 				<h3>Sign In</h3>
 			</div>
 			<div class="card-body">
 				<form>
 					<div class="input-group form-group">
-						<div class="row">
-							<div class="col col-2"></div>
-                            <span class="input-group-text"><i class="fas fa-user"></i></span>
-						</div>
-						<input type="text" class="form-control" placeholder="username">
-						
-					</div>
+                        <span class="input-group-text"><i class="fas fa-user"></i></span>
+                        <input type="text" class="form-control" v-model="email" name="email" placeholder="Email">
+                    </div>
+					<br>
 					<div class="input-group form-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"><i class="fas fa-key"></i></span>
-						</div>
-						<input type="password" class="form-control" placeholder="password">
+						<span class="input-group-text"><i class="fas fa-key"></i></span>
+						<input type="password" class="form-control" v-model="password" name="password" placeholder="Password">
 					</div>
+                    <br>
+                    <div class="d-grid">
+                        <button @click="login()" class="btn btn-primary mb-4">Login</button>
+                    </div>
 					
-					<div class="form-group">
-						<input type="submit" value="Login" class="btn float-right login_btn">
-					</div>
 				</form>
 			</div>
 			<div class="card-footer">
 				<div class="d-flex justify-content-center links">
-					Don't have an account?<a href="#">Sign Up</a>
+					Don't have an account?&nbsp<a href="sign-up-page.html">Sign Up</a>
 				</div>
 				<div class="d-flex justify-content-center">
 					<a href="#">Forgot your password?</a>
@@ -67,8 +69,6 @@
 		</div>
 	</div>
 </div>
-
-
 
 
  <!-- START OF JS IMPORTS (DO NOT ADD ANYTHING BELOW THIS LINE!) ---------------------------------------------------------------------------------------------- -->
