--- a/templates/pages/log-in-page.html
+++ b/templates/pages/log-in-page.html
@@ -26,7 +26,8 @@
     </style>
     
 </head>
-<body>
+
+<body id="signuplogin">
 
 <div class="container">
     <div class="d-flex justify-content-center p-4">
@@ -44,7 +45,7 @@
 				<form>
 					<div class="input-group form-group">
                         <span class="input-group-text"><i class="fas fa-user"></i></span>
-                        <input type="text" class="form-control" v-model="email" name="email" placeholder="Email">
+                        <input type="email" class="form-control" v-model="email" name="email" placeholder="Email">
                     </div>
 					<br>
 					<div class="input-group form-group">
