--- a/templates/pages/sign-up-page.html
+++ b/templates/pages/sign-up-page.html
@@ -10,7 +10,7 @@
 
     <!-- bootstrap css -->
     <link href="../../css/main.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <!-- external js file -->
     <script type="module" src="temp/signup_login.js"></script>
     
@@ -101,11 +101,11 @@
                 <div class="text-center">
                     <p>or sign up with:</p>
                     <button type="button" class="btn btn-link btn-floating mx-1">
-                    <i class="fab fa-facebook-f"></i>
+                    <i class="fa fa-facebook"></i>
                     </button>
 
                     <button type="button" class="btn btn-link btn-floating mx-1">
-                    <i class="fab fa-google"></i>
+                    <i class="fa fa-google"></i>
                     </button>
                 </div>
             </form>
