--- a/templates/pages/sign-up-page.html
+++ b/templates/pages/sign-up-page.html
@@ -10,7 +10,7 @@
 
     <!-- bootstrap css -->
     <link href="../../css/main.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css"> -->
     <!-- external js file -->
     <script type="module" src="temp/signup_login.js"></script>
     
