--- a/templates/pages/signup_login pages/login_page.html
+++ b/templates/pages/signup_login pages/login_page.html
@@ -6,16 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- local css -->
-    <link rel="stylesheet" href="../template.css">
+    <link rel="stylesheet" href="../../template.css">
 
     <!-- bootstrap css -->
-    <link href="../../css/main.min.css" rel="stylesheet">
+    <link href="../../../css/main.min.css" rel="stylesheet">
+
+    <!-- external js file -->
+    <script type="module" src="signup_login.js"></script>
+
+    <!-- vue script -->
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    
 
     <title>Login Page</title>
 
     <style>
         body {
-        background: url("images/login-bg.jpeg") center center fixed;
+        background: url("../images/login-bg.jpeg") center center fixed;
         background-size: cover;
         }
 
@@ -61,7 +68,7 @@
 			</div>
 			<div class="card-footer">
 				<div class="d-flex justify-content-center links">
-					Don't have an account?&nbsp<a href="sign-up-page.html">Sign Up</a>
+					Don't have an account?&nbsp<a href="signup_page.html">Sign Up</a>
 				</div>
 				<div class="d-flex justify-content-center">
 					<a href="#">Forgot your password?</a>
@@ -77,6 +84,6 @@
     <script src="https://kit.fontawesome.com/c7ddd7a650.js" crossorigin="anonymous"></script>
 
     <!-- bootstrap js -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 </body>
 </html>
