--- a/templates/pages/signup_login pages/signup_page.html
+++ b/templates/pages/signup_login pages/signup_page.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- local css -->
-    <link rel="stylesheet" href="../template.css">
+    <link rel="stylesheet" href="../../template.css">
 
     <!-- bootstrap css -->
-    <link href="../../css/main.min.css" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css"> -->
+    <link href="../../../css/main.min.css" rel="stylesheet">
+   
     <!-- external js file -->
-    <script type="module" src="temp/signup_login.js"></script>
+    <script type="module" src="signup_login.js"></script>
     
     <!-- vue script -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
@@ -89,7 +89,7 @@
                 </div>
 
                 <div class="d-flex justify-content-center links">
-					Already have an account?&nbsp<a href="log-in-page.html">Log In</a>
+					Already have an account?&nbsp<a href="login_page.html">Log In</a>
 				</div>
                 <br>
                 <!-- Submit button -->
@@ -114,7 +114,7 @@
         </div>
 
         <div class="col-lg-6 d-none d-lg-block">
-            <img src="images/signup-img.jpg" class="w-100 rounded-4 shadow-4"
+            <img src="../images/signup-img.jpg" class="w-100 rounded-4 shadow-4"
             alt="" />
         </div>
         </div>
